feat: saving nodes & edges. Updated types
