# src/routes/trigger/index.ts
@@ -1,9 +1,12 @@
 import type { FastifyPluginAsync } from 'fastify'
 
+import { getRequestAction } from '../../handlers/action/get-request-action'
 import ActionBody from '../../schemas/trigger_body.json'
-import type { Action } from '../../types/action'
+import type { ActionNode } from '../../types/action'
+import type { Edge } from '../../types/edge'
+import type { TriggerNode } from '../../types/trigger'
 import type { TriggerBodySchema } from '../../types/trigger_body'
-import { getRequestAction } from '../../handlers/action/get-request-action';
+import { saveNodesAndEdges } from '../../utils/db/save-nodes-and-edges'
 
 const user: FastifyPluginAsync = async (fastify, _opts): Promise<void> => {
   // Refer https://swagger.io/docs/specification/describing-request-body/
@@ -26,6 +29,14 @@ const user: FastifyPluginAsync = async (fastify, _opts): Promise<void> => {
    *            schema:
    *             type: object
    *             properties:
+   *              nodes:
+   *               type: array
+   *               items:
+   *                type: object
+   *              edges:
+   *               type: array
+   *               items:
+   *                type: object
    *              actions:
    *               type: array
    *               items:
@@ -46,11 +57,17 @@ const user: FastifyPluginAsync = async (fastify, _opts): Promise<void> => {
       },
     },
     async (request, reply) => {
-      const actions = request.body.actions as Action[]
-      
+      const nodes = request.body.nodes as (ActionNode | TriggerNode)[]
+      const edges = request.body.edges as Edge[]
+
+      // Save nodes & edges
+      saveNodesAndEdges(fastify)(nodes, edges)
+
+      const executableActions = request.body.actions as ActionNode[]
+
       const result = await Promise.all(
-        actions.map(async (a) => {
-          const { type } = a
+        executableActions.map(async (a) => {
+          const { type } = a.data
           switch (type) {
             case 'GET_REQUEST':
               return getRequestAction(fastify)(a)
